fix layout bug

--- a/res/style.css
+++ b/res/style.css
@@ -54,6 +54,7 @@ h1.website-name {
 
 header {
     width: 100%;
+    box-sizing: border-box;
     padding: 20px 20px 10px 20px;
     min-height: 30px;
     background-color: #c9daf8;
